# sonar

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  prometheus.yml
docker-compose/volume/: start.sh
example/: sonar.yaml
grafana/: dashboard.json  dashboard.yaml  datasource.yaml
prometheus/: prometheus.yml
src/: cli.rs  main.rs
src/command/: autocomplete.rs  init.rs  mod.rs  run.rs
src/commands/: config.rs  init.rs  mod.rs  run.rs
src/config/: grafana.rs  mod.rs
src/logger/: mod.rs
src/messages/: mod.rs
src/reporters/: file.rs
src/reports/: file.rs
src/requesters/: mod.rs
src/server/: mod.rs
src/tasks/: file.rs  http.rs  webhook.rs
src/utils/: mod.rs
