[package]
name = "sonar"
version = "0.1.0"
authors = ["Ronni Skansing <rskansing@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
serde_yaml = "0.8.11"
serde = { version = "1.0.104", features = ["derive"]}
strum = "0.17.1"
strum_macros = "0.17.1"
chrono = "0.4.10"
tokio = { version = "0.2.11", features = ["full"] }
reqwest = "0.10.1"
