[package]
name = "sonar"
version = "0.1.0"
authors = ["Ronni Skansing <rskansing@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
serde_yaml = "0.8.11"
serde = { version = "1.0.106", features = ["derive"]}
strum = "0.18.0"
strum_macros = "0.18.0"
chrono = "0.4.11"
tokio = { version = "0.2.17", features = ["full"] }
reqwest = "0.10.4"
futures = "0.3.4"
simplelog = "0.7.4"
log = "0.4.8"
hyper = "0.13.4"
prometheus = { version = "0.8.0", features = ["process"] }
duration-string = { version = "0.0.6", features = ["serde"] }
grafana-dashboard = { version = "0.0.7"}  #path="../grafana-dashboard"
serde_json = "1.0.51"
notify = "4.0.15"
async-trait = "0.1.30"
